[package]
name = "bcsort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-sort = "0.1.2"
bytesize = "1.1.0"
clap = { version = "4.1.6", features = ["derive"] }
csv = "1.2"
parse-size = "1"
num_cpus = "1"

[profile.release]
debug = 1
